--- a/frontend/src/ComponentsCSS/Message.css
+++ b/frontend/src/ComponentsCSS/Message.css
@@ -5,8 +5,11 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
   line-height: 1.6;
   padding: 20px;
-  max-width: 1200px;
+  max-width: 1800px;
   margin: 0 auto;
+  margin-left:-10px;
+  margin-right:-10px;
+  margin-top:40px;
 }
 
 /* Header */
@@ -427,6 +430,7 @@
   background-color: #000000;
   color: #ffffff;
   margin-left: auto;
+  margin-top:10px;
 }
 
 .insta-message-header {
