--- a/frontend/src/ComponentsCSS/blogeditor.css
+++ b/frontend/src/ComponentsCSS/blogeditor.css
@@ -723,6 +723,8 @@
   padding: 2rem;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+  margin-left:-10px;
+  margin-right:-10px;
 }
 
 /* Scrollbar */
