--- a/frontend/src/ComponentsCSS/blogeditor.css
+++ b/frontend/src/ComponentsCSS/blogeditor.css
@@ -350,17 +350,21 @@
 
 /* Modal Styles */
 .modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-  padding: 1rem;
+ max-width: 1800px;
+            margin-top:80px;
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background-color: #ffffff;
+          z-index: 1000;
+          overflow-y: auto;
+
+           -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
+    margin-left:-53px;
+    margin-right:-60px;
 }
 
 .modal-content {
